@@ -153,7 +153,7 @@ public final class X13Protos {
       "\007 \001(\005\022\017\n\007nbcasts\030\010 \001(\005\022!\n\005sigma\030\t \001(\0162\022." +
       "x13.CalendarSigma\022\017\n\007vsigmas\030\n \003(\005\022\026\n\016ex" +
       "clude_fcasts\030\013 \001(\010\022!\n\004bias\030\014 \001(\0162\023.x13.B" +
-      "iasCorrection\"\210\017\n\014RegArimaSpec\022*\n\005basic\030" +
+      "iasCorrection\"\242\017\n\014RegArimaSpec\022*\n\005basic\030" +
       "\001 \001(\0132\033.x13.RegArimaSpec.BasicSpec\0222\n\ttr" +
       "ansform\030\002 \001(\0132\037.x13.RegArimaSpec.Transfo" +
       "rmSpec\022.\n\007outlier\030\003 \001(\0132\035.x13.RegArimaSp" +
@@ -162,140 +162,141 @@ public final class X13Protos {
       "ArimaSpec.AutoModelSpec\0224\n\nregression\030\006 " +
       "\001(\0132 .x13.RegArimaSpec.RegressionSpec\0220\n" +
       "\010estimate\030\007 \001(\0132\036.x13.RegArimaSpec.Estim" +
-      "ateSpec\032^\n\tBasicSpec\022\037\n\004span\030\001 \001(\0132\021.jd3" +
+      "ateSpec\032x\n\tBasicSpec\022\037\n\004span\030\001 \001(\0132\021.jd3" +
       ".TimeSelector\022\025\n\rpreprocessing\030\002 \001(\010\022\031\n\021" +
-      "preliminary_check\030\003 \001(\010\032\233\001\n\rTransformSpe" +
-      "c\0221\n\016transformation\030\001 \001(\0162\031.modelling.Tr" +
-      "ansformation\022)\n\006adjust\030\002 \001(\0162\031.modelling" +
-      ".LengthOfPeriod\022\017\n\007aicdiff\030\003 \001(\001\022\033\n\023outl" +
-      "iers_correction\030\004 \001(\010\032\362\001\n\013OutlierSpec\0224\n" +
-      "\010outliers\030\001 \003(\0132\".x13.RegArimaSpec.Outli" +
-      "erSpec.Type\022\037\n\004span\030\002 \001(\0132\021.jd3.TimeSele" +
-      "ctor\022\r\n\005defva\030\003 \001(\001\022\"\n\006method\030\004 \001(\0162\022.x1" +
-      "3.OutlierMethod\022\027\n\017monthly_tc_rate\030\005 \001(\001" +
-      "\022\017\n\007maxiter\030\006 \001(\005\022\r\n\005lsrun\030\007 \001(\005\032 \n\004Type" +
-      "\022\014\n\004code\030\001 \001(\t\022\n\n\002va\030\002 \001(\001\032\314\001\n\rAutoModel" +
-      "Spec\022\017\n\007enabled\030\001 \001(\010\022\020\n\010ljungbox\030\002 \001(\001\022" +
-      "\014\n\004tsig\030\003 \001(\001\022\016\n\006predcv\030\004 \001(\001\022\017\n\007ubfinal" +
-      "\030\005 \001(\001\022\013\n\003ub1\030\006 \001(\001\022\013\n\003ub2\030\007 \001(\001\022\016\n\006canc" +
-      "el\030\010 \001(\001\022\013\n\003fct\030\t \001(\001\022\021\n\tacceptdef\030\n \001(\010" +
-      "\022\r\n\005mixed\030\013 \001(\010\022\020\n\010balanced\030\014 \001(\010\032\205\001\n\nEa" +
-      "sterSpec\022\035\n\004type\030\001 \001(\0162\017.x13.EasterType\022" +
-      "\020\n\010duration\030\002 \001(\005\022!\n\004test\030\003 \001(\0162\023.x13.Re" +
-      "gressionTest\022#\n\013coefficient\030\n \001(\0132\016.jd3." +
-      "Parameter\032\330\002\n\017TradingDaysSpec\022\"\n\002td\030\001 \001(" +
-      "\0162\026.modelling.TradingDays\022%\n\002lp\030\002 \001(\0162\031." +
-      "modelling.LengthOfPeriod\022\020\n\010holidays\030\003 \001" +
-      "(\t\022\r\n\005users\030\004 \003(\t\022\t\n\001w\030\005 \001(\005\022!\n\004test\030\006 \001" +
-      "(\0162\023.x13.RegressionTest\022\'\n\004auto\030\007 \001(\0162\031." +
-      "x13.AutomaticTradingDays\022\016\n\006ptest1\030\010 \001(\001" +
-      "\022\016\n\006ptest2\030\t \001(\001\022\023\n\013auto_adjust\030\n \001(\010\022&\n" +
-      "\016tdcoefficients\030\013 \003(\0132\016.jd3.Parameter\022%\n" +
-      "\rlpcoefficient\030\014 \001(\0132\016.jd3.Parameter\032\303\002\n" +
-      "\016RegressionSpec\022\034\n\004mean\030\001 \001(\0132\016.jd3.Para" +
-      "meter\022\022\n\ncheck_mean\030\002 \001(\010\022-\n\002td\030\003 \001(\0132!." +
-      "x13.RegArimaSpec.TradingDaysSpec\022,\n\006east" +
-      "er\030\004 \001(\0132\034.x13.RegArimaSpec.EasterSpec\022$" +
-      "\n\010outliers\030\005 \003(\0132\022.modelling.Outlier\022$\n\005" +
-      "users\030\006 \003(\0132\025.modelling.TsVariable\0226\n\rin" +
-      "terventions\030\007 \003(\0132\037.modelling.Interventi" +
-      "onVariable\022\036\n\005ramps\030\010 \003(\0132\017.modelling.Ra" +
-      "mp\032<\n\014EstimateSpec\022\037\n\004span\030\001 \001(\0132\021.jd3.T" +
-      "imeSelector\022\013\n\003tol\030\002 \001(\001\"r\n\004Spec\022#\n\010rega" +
-      "rima\030\001 \001(\0132\021.x13.RegArimaSpec\022\031\n\003x11\030\002 \001" +
-      "(\0132\014.x13.X11Spec\022*\n\014benchmarking\030\003 \001(\0132\024" +
-      ".sa.BenchmarkingSpec\"\334\010\n\nX11Results\022$\n\004m" +
-      "ode\030\001 \001(\0162\026.x13.DecompositionMode\022\027\n\002d1\030" +
-      "\002 \001(\0132\013.jd3.TsData\022\027\n\002d2\030\003 \001(\0132\013.jd3.TsD" +
-      "ata\022\027\n\002d4\030\004 \001(\0132\013.jd3.TsData\022\027\n\002d5\030\005 \001(\013" +
-      "2\013.jd3.TsData\022\027\n\002d6\030\006 \001(\0132\013.jd3.TsData\022\027" +
-      "\n\002d7\030\007 \001(\0132\013.jd3.TsData\022\027\n\002d8\030\010 \001(\0132\013.jd" +
-      "3.TsData\022\027\n\002d9\030\t \001(\0132\013.jd3.TsData\022\030\n\003d10" +
-      "\030\n \001(\0132\013.jd3.TsData\022\030\n\003d11\030\013 \001(\0132\013.jd3.T" +
-      "sData\022\030\n\003d12\030\014 \001(\0132\013.jd3.TsData\022\030\n\003d13\030\r" +
-      " \001(\0132\013.jd3.TsData\0223\n\026final_seasonal_filt" +
-      "ers\030\016 \003(\0162\023.x13.SeasonalFilter\022\036\n\026final_" +
-      "henderson_filter\030\017 \001(\005\022\017\n\007icratio\030\020 \001(\001\022" +
-      "\027\n\002b1\030\024 \001(\0132\013.jd3.TsData\022\027\n\002b2\030\025 \001(\0132\013.j" +
-      "d3.TsData\022\027\n\002b3\030\026 \001(\0132\013.jd3.TsData\022\027\n\002b4" +
-      "\030\027 \001(\0132\013.jd3.TsData\022\027\n\002b5\030\030 \001(\0132\013.jd3.Ts" +
-      "Data\022\027\n\002b6\030\031 \001(\0132\013.jd3.TsData\022\027\n\002b7\030\032 \001(" +
-      "\0132\013.jd3.TsData\022\027\n\002b8\030\033 \001(\0132\013.jd3.TsData\022" +
-      "\027\n\002b9\030\034 \001(\0132\013.jd3.TsData\022\030\n\003b10\030\035 \001(\0132\013." +
-      "jd3.TsData\022\030\n\003b11\030\036 \001(\0132\013.jd3.TsData\022\030\n\003" +
-      "b13\030\037 \001(\0132\013.jd3.TsData\022\030\n\003b17\030  \001(\0132\013.jd" +
-      "3.TsData\022\030\n\003b20\030! \001(\0132\013.jd3.TsData\022\027\n\002c1" +
-      "\030( \001(\0132\013.jd3.TsData\022\027\n\002c2\030) \001(\0132\013.jd3.Ts" +
-      "Data\022\027\n\002c4\030* \001(\0132\013.jd3.TsData\022\027\n\002c5\030+ \001(" +
-      "\0132\013.jd3.TsData\022\027\n\002c6\030, \001(\0132\013.jd3.TsData\022" +
-      "\027\n\002c7\030- \001(\0132\013.jd3.TsData\022\027\n\002c9\030. \001(\0132\013.j" +
-      "d3.TsData\022\030\n\003c10\030/ \001(\0132\013.jd3.TsData\022\030\n\003c" +
-      "11\0300 \001(\0132\013.jd3.TsData\022\030\n\003c13\0301 \001(\0132\013.jd3" +
-      ".TsData\022\030\n\003c17\0302 \001(\0132\013.jd3.TsData\022\030\n\003c20" +
-      "\0303 \001(\0132\013.jd3.TsData\"\253\001\n\013MStatistics\022\n\n\002m" +
-      "1\030\001 \001(\001\022\n\n\002m2\030\002 \001(\001\022\n\n\002m3\030\003 \001(\001\022\n\n\002m4\030\004 " +
-      "\001(\001\022\n\n\002m5\030\005 \001(\001\022\n\n\002m6\030\006 \001(\001\022\n\n\002m7\030\007 \001(\001\022" +
-      "\n\n\002m8\030\010 \001(\001\022\n\n\002m9\030\t \001(\001\022\013\n\003m10\030\n \001(\001\022\013\n\003" +
-      "m11\030\013 \001(\001\022\t\n\001q\030\014 \001(\001\022\013\n\003qm2\030\r \001(\001\"\303\001\n\020X1" +
-      "3Preadjustment\022\027\n\002a1\030\001 \001(\0132\013.jd3.TsData\022" +
-      "\030\n\003a1a\030\002 \001(\0132\013.jd3.TsData\022\030\n\003a1b\030\003 \001(\0132\013" +
-      ".jd3.TsData\022\027\n\002a6\030\004 \001(\0132\013.jd3.TsData\022\027\n\002" +
-      "a7\030\005 \001(\0132\013.jd3.TsData\022\027\n\002a8\030\006 \001(\0132\013.jd3." +
-      "TsData\022\027\n\002a9\030\007 \001(\0132\013.jd3.TsData\"\355\002\n\tX13F" +
-      "inals\022\035\n\010d11final\030\001 \001(\0132\013.jd3.TsData\022\035\n\010" +
-      "d12final\030\002 \001(\0132\013.jd3.TsData\022\035\n\010d13final\030" +
-      "\003 \001(\0132\013.jd3.TsData\022\030\n\003d16\030\004 \001(\0132\013.jd3.Ts" +
-      "Data\022\030\n\003d18\030\005 \001(\0132\013.jd3.TsData\022\031\n\004d11a\030\006" +
-      " \001(\0132\013.jd3.TsData\022\031\n\004d12a\030\007 \001(\0132\013.jd3.Ts" +
-      "Data\022\031\n\004d16a\030\010 \001(\0132\013.jd3.TsData\022\031\n\004d18a\030" +
-      "\t \001(\0132\013.jd3.TsData\022\027\n\002e1\030\n \001(\0132\013.jd3.TsD" +
-      "ata\022\027\n\002e2\030\013 \001(\0132\013.jd3.TsData\022\027\n\002e3\030\014 \001(\013" +
-      "2\013.jd3.TsData\022\030\n\003e11\030\r \001(\0132\013.jd3.TsData\"" +
-      "4\n\013Diagnostics\022%\n\013mstatistics\030\001 \001(\0132\020.x1" +
-      "3.MStatistics\"\205\002\n\nX13Results\022,\n\rpreadjus" +
-      "tment\030\001 \001(\0132\025.x13.X13Preadjustment\022.\n\rpr" +
-      "eprocessing\030\002 \001(\0132\027.regarima.RegArimaMod" +
-      "el\022&\n\rdecomposition\030\003 \001(\0132\017.x13.X11Resul" +
-      "ts\022\035\n\005final\030\004 \001(\0132\016.x13.X13Finals\022)\n\017dia" +
-      "gnostics_x13\030\005 \001(\0132\020.x13.Diagnostics\022\'\n\016" +
-      "diagnostics_sa\030\006 \001(\0132\017.sa.Diagnostics\"\251\002" +
-      "\n\016RegArimaOutput\022\'\n\006result\030\001 \001(\0132\027.regar" +
-      "ima.RegArimaModel\022*\n\017estimation_spec\030\002 \001" +
-      "(\0132\021.x13.RegArimaSpec\022&\n\013result_spec\030\003 \001" +
-      "(\0132\021.x13.RegArimaSpec\022 \n\003log\030\004 \001(\0132\023.jd3" +
-      ".ProcessingLogs\0221\n\007details\030\005 \003(\0132 .x13.R" +
-      "egArimaOutput.DetailsEntry\032E\n\014DetailsEnt" +
-      "ry\022\013\n\003key\030\001 \001(\t\022$\n\005value\030\002 \001(\0132\025.jd3.Pro" +
-      "cessingDetail:\0028\001\"\207\002\n\tX13Output\022\037\n\006resul" +
-      "t\030\001 \001(\0132\017.x13.X13Results\022\"\n\017estimation_s" +
-      "pec\030\002 \001(\0132\t.x13.Spec\022\036\n\013result_spec\030\003 \001(" +
-      "\0132\t.x13.Spec\022 \n\003log\030\004 \001(\0132\023.jd3.Processi" +
-      "ngLogs\022,\n\007details\030\005 \003(\0132\033.x13.X13Output." +
+      "preliminary_check\030\003 \001(\010\022\030\n\020annual_freque" +
+      "ncy\030\004 \001(\005\032\233\001\n\rTransformSpec\0221\n\016transform" +
+      "ation\030\001 \001(\0162\031.modelling.Transformation\022)" +
+      "\n\006adjust\030\002 \001(\0162\031.modelling.LengthOfPerio" +
+      "d\022\017\n\007aicdiff\030\003 \001(\001\022\033\n\023outliers_correctio" +
+      "n\030\004 \001(\010\032\362\001\n\013OutlierSpec\0224\n\010outliers\030\001 \003(" +
+      "\0132\".x13.RegArimaSpec.OutlierSpec.Type\022\037\n" +
+      "\004span\030\002 \001(\0132\021.jd3.TimeSelector\022\r\n\005defva\030" +
+      "\003 \001(\001\022\"\n\006method\030\004 \001(\0162\022.x13.OutlierMetho" +
+      "d\022\027\n\017monthly_tc_rate\030\005 \001(\001\022\017\n\007maxiter\030\006 " +
+      "\001(\005\022\r\n\005lsrun\030\007 \001(\005\032 \n\004Type\022\014\n\004code\030\001 \001(\t" +
+      "\022\n\n\002va\030\002 \001(\001\032\314\001\n\rAutoModelSpec\022\017\n\007enable" +
+      "d\030\001 \001(\010\022\020\n\010ljungbox\030\002 \001(\001\022\014\n\004tsig\030\003 \001(\001\022" +
+      "\016\n\006predcv\030\004 \001(\001\022\017\n\007ubfinal\030\005 \001(\001\022\013\n\003ub1\030" +
+      "\006 \001(\001\022\013\n\003ub2\030\007 \001(\001\022\016\n\006cancel\030\010 \001(\001\022\013\n\003fc" +
+      "t\030\t \001(\001\022\021\n\tacceptdef\030\n \001(\010\022\r\n\005mixed\030\013 \001(" +
+      "\010\022\020\n\010balanced\030\014 \001(\010\032\205\001\n\nEasterSpec\022\035\n\004ty" +
+      "pe\030\001 \001(\0162\017.x13.EasterType\022\020\n\010duration\030\002 " +
+      "\001(\005\022!\n\004test\030\003 \001(\0162\023.x13.RegressionTest\022#" +
+      "\n\013coefficient\030\n \001(\0132\016.jd3.Parameter\032\330\002\n\017" +
+      "TradingDaysSpec\022\"\n\002td\030\001 \001(\0162\026.modelling." +
+      "TradingDays\022%\n\002lp\030\002 \001(\0162\031.modelling.Leng" +
+      "thOfPeriod\022\020\n\010holidays\030\003 \001(\t\022\r\n\005users\030\004 " +
+      "\003(\t\022\t\n\001w\030\005 \001(\005\022!\n\004test\030\006 \001(\0162\023.x13.Regre" +
+      "ssionTest\022\'\n\004auto\030\007 \001(\0162\031.x13.AutomaticT" +
+      "radingDays\022\016\n\006ptest1\030\010 \001(\001\022\016\n\006ptest2\030\t \001" +
+      "(\001\022\023\n\013auto_adjust\030\n \001(\010\022&\n\016tdcoefficient" +
+      "s\030\013 \003(\0132\016.jd3.Parameter\022%\n\rlpcoefficient" +
+      "\030\014 \001(\0132\016.jd3.Parameter\032\303\002\n\016RegressionSpe" +
+      "c\022\034\n\004mean\030\001 \001(\0132\016.jd3.Parameter\022\022\n\ncheck" +
+      "_mean\030\002 \001(\010\022-\n\002td\030\003 \001(\0132!.x13.RegArimaSp" +
+      "ec.TradingDaysSpec\022,\n\006easter\030\004 \001(\0132\034.x13" +
+      ".RegArimaSpec.EasterSpec\022$\n\010outliers\030\005 \003" +
+      "(\0132\022.modelling.Outlier\022$\n\005users\030\006 \003(\0132\025." +
+      "modelling.TsVariable\0226\n\rinterventions\030\007 " +
+      "\003(\0132\037.modelling.InterventionVariable\022\036\n\005" +
+      "ramps\030\010 \003(\0132\017.modelling.Ramp\032<\n\014Estimate" +
+      "Spec\022\037\n\004span\030\001 \001(\0132\021.jd3.TimeSelector\022\013\n" +
+      "\003tol\030\002 \001(\001\"r\n\004Spec\022#\n\010regarima\030\001 \001(\0132\021.x" +
+      "13.RegArimaSpec\022\031\n\003x11\030\002 \001(\0132\014.x13.X11Sp" +
+      "ec\022*\n\014benchmarking\030\003 \001(\0132\024.sa.Benchmarki" +
+      "ngSpec\"\334\010\n\nX11Results\022$\n\004mode\030\001 \001(\0162\026.x1" +
+      "3.DecompositionMode\022\027\n\002d1\030\002 \001(\0132\013.jd3.Ts" +
+      "Data\022\027\n\002d2\030\003 \001(\0132\013.jd3.TsData\022\027\n\002d4\030\004 \001(" +
+      "\0132\013.jd3.TsData\022\027\n\002d5\030\005 \001(\0132\013.jd3.TsData\022" +
+      "\027\n\002d6\030\006 \001(\0132\013.jd3.TsData\022\027\n\002d7\030\007 \001(\0132\013.j" +
+      "d3.TsData\022\027\n\002d8\030\010 \001(\0132\013.jd3.TsData\022\027\n\002d9" +
+      "\030\t \001(\0132\013.jd3.TsData\022\030\n\003d10\030\n \001(\0132\013.jd3.T" +
+      "sData\022\030\n\003d11\030\013 \001(\0132\013.jd3.TsData\022\030\n\003d12\030\014" +
+      " \001(\0132\013.jd3.TsData\022\030\n\003d13\030\r \001(\0132\013.jd3.TsD" +
+      "ata\0223\n\026final_seasonal_filters\030\016 \003(\0162\023.x1" +
+      "3.SeasonalFilter\022\036\n\026final_henderson_filt" +
+      "er\030\017 \001(\005\022\017\n\007icratio\030\020 \001(\001\022\027\n\002b1\030\024 \001(\0132\013." +
+      "jd3.TsData\022\027\n\002b2\030\025 \001(\0132\013.jd3.TsData\022\027\n\002b" +
+      "3\030\026 \001(\0132\013.jd3.TsData\022\027\n\002b4\030\027 \001(\0132\013.jd3.T" +
+      "sData\022\027\n\002b5\030\030 \001(\0132\013.jd3.TsData\022\027\n\002b6\030\031 \001" +
+      "(\0132\013.jd3.TsData\022\027\n\002b7\030\032 \001(\0132\013.jd3.TsData" +
+      "\022\027\n\002b8\030\033 \001(\0132\013.jd3.TsData\022\027\n\002b9\030\034 \001(\0132\013." +
+      "jd3.TsData\022\030\n\003b10\030\035 \001(\0132\013.jd3.TsData\022\030\n\003" +
+      "b11\030\036 \001(\0132\013.jd3.TsData\022\030\n\003b13\030\037 \001(\0132\013.jd" +
+      "3.TsData\022\030\n\003b17\030  \001(\0132\013.jd3.TsData\022\030\n\003b2" +
+      "0\030! \001(\0132\013.jd3.TsData\022\027\n\002c1\030( \001(\0132\013.jd3.T" +
+      "sData\022\027\n\002c2\030) \001(\0132\013.jd3.TsData\022\027\n\002c4\030* \001" +
+      "(\0132\013.jd3.TsData\022\027\n\002c5\030+ \001(\0132\013.jd3.TsData" +
+      "\022\027\n\002c6\030, \001(\0132\013.jd3.TsData\022\027\n\002c7\030- \001(\0132\013." +
+      "jd3.TsData\022\027\n\002c9\030. \001(\0132\013.jd3.TsData\022\030\n\003c" +
+      "10\030/ \001(\0132\013.jd3.TsData\022\030\n\003c11\0300 \001(\0132\013.jd3" +
+      ".TsData\022\030\n\003c13\0301 \001(\0132\013.jd3.TsData\022\030\n\003c17" +
+      "\0302 \001(\0132\013.jd3.TsData\022\030\n\003c20\0303 \001(\0132\013.jd3.T" +
+      "sData\"\253\001\n\013MStatistics\022\n\n\002m1\030\001 \001(\001\022\n\n\002m2\030" +
+      "\002 \001(\001\022\n\n\002m3\030\003 \001(\001\022\n\n\002m4\030\004 \001(\001\022\n\n\002m5\030\005 \001(" +
+      "\001\022\n\n\002m6\030\006 \001(\001\022\n\n\002m7\030\007 \001(\001\022\n\n\002m8\030\010 \001(\001\022\n\n" +
+      "\002m9\030\t \001(\001\022\013\n\003m10\030\n \001(\001\022\013\n\003m11\030\013 \001(\001\022\t\n\001q" +
+      "\030\014 \001(\001\022\013\n\003qm2\030\r \001(\001\"\303\001\n\020X13Preadjustment" +
+      "\022\027\n\002a1\030\001 \001(\0132\013.jd3.TsData\022\030\n\003a1a\030\002 \001(\0132\013" +
+      ".jd3.TsData\022\030\n\003a1b\030\003 \001(\0132\013.jd3.TsData\022\027\n" +
+      "\002a6\030\004 \001(\0132\013.jd3.TsData\022\027\n\002a7\030\005 \001(\0132\013.jd3" +
+      ".TsData\022\027\n\002a8\030\006 \001(\0132\013.jd3.TsData\022\027\n\002a9\030\007" +
+      " \001(\0132\013.jd3.TsData\"\355\002\n\tX13Finals\022\035\n\010d11fi" +
+      "nal\030\001 \001(\0132\013.jd3.TsData\022\035\n\010d12final\030\002 \001(\013" +
+      "2\013.jd3.TsData\022\035\n\010d13final\030\003 \001(\0132\013.jd3.Ts" +
+      "Data\022\030\n\003d16\030\004 \001(\0132\013.jd3.TsData\022\030\n\003d18\030\005 " +
+      "\001(\0132\013.jd3.TsData\022\031\n\004d11a\030\006 \001(\0132\013.jd3.TsD" +
+      "ata\022\031\n\004d12a\030\007 \001(\0132\013.jd3.TsData\022\031\n\004d16a\030\010" +
+      " \001(\0132\013.jd3.TsData\022\031\n\004d18a\030\t \001(\0132\013.jd3.Ts" +
+      "Data\022\027\n\002e1\030\n \001(\0132\013.jd3.TsData\022\027\n\002e2\030\013 \001(" +
+      "\0132\013.jd3.TsData\022\027\n\002e3\030\014 \001(\0132\013.jd3.TsData\022" +
+      "\030\n\003e11\030\r \001(\0132\013.jd3.TsData\"4\n\013Diagnostics" +
+      "\022%\n\013mstatistics\030\001 \001(\0132\020.x13.MStatistics\"" +
+      "\205\002\n\nX13Results\022,\n\rpreadjustment\030\001 \001(\0132\025." +
+      "x13.X13Preadjustment\022.\n\rpreprocessing\030\002 " +
+      "\001(\0132\027.regarima.RegArimaModel\022&\n\rdecompos" +
+      "ition\030\003 \001(\0132\017.x13.X11Results\022\035\n\005final\030\004 " +
+      "\001(\0132\016.x13.X13Finals\022)\n\017diagnostics_x13\030\005" +
+      " \001(\0132\020.x13.Diagnostics\022\'\n\016diagnostics_sa" +
+      "\030\006 \001(\0132\017.sa.Diagnostics\"\251\002\n\016RegArimaOutp" +
+      "ut\022\'\n\006result\030\001 \001(\0132\027.regarima.RegArimaMo" +
+      "del\022*\n\017estimation_spec\030\002 \001(\0132\021.x13.RegAr" +
+      "imaSpec\022&\n\013result_spec\030\003 \001(\0132\021.x13.RegAr" +
+      "imaSpec\022 \n\003log\030\004 \001(\0132\023.jd3.ProcessingLog" +
+      "s\0221\n\007details\030\005 \003(\0132 .x13.RegArimaOutput." +
       "DetailsEntry\032E\n\014DetailsEntry\022\013\n\003key\030\001 \001(" +
       "\t\022$\n\005value\030\002 \001(\0132\025.jd3.ProcessingDetail:" +
-      "\0028\001*\200\001\n\021DecompositionMode\022\020\n\014MODE_UNKNOW" +
-      "N\020\000\022\021\n\rMODE_ADDITIVE\020\001\022\027\n\023MODE_MULTIPLIC" +
-      "ATIVE\020\002\022\024\n\020MODE_LOGADDITIVE\020\003\022\027\n\023MODE_PS" +
-      "EUDOADDITIVE\020\004*\350\001\n\016SeasonalFilter\022\027\n\023SEA" +
-      "SONAL_FILTER_MSR\020\000\022\030\n\024SEASONAL_FILTER_S3" +
-      "X1\020\001\022\030\n\024SEASONAL_FILTER_S3X3\020\002\022\030\n\024SEASON" +
-      "AL_FILTER_S3X5\020\003\022\030\n\024SEASONAL_FILTER_S3X9" +
-      "\020\004\022\031\n\025SEASONAL_FILTER_S3X15\020\005\022\032\n\026SEASONA" +
-      "L_FILTER_STABLE\020\006\022\036\n\032SEASONAL_FILTER_X11" +
-      "DEFAULT\020\007*R\n\rCalendarSigma\022\016\n\nSIGMA_NONE" +
-      "\020\000\022\020\n\014SIGMA_SIGNIF\020\001\022\r\n\tSIGMA_ALL\020\002\022\020\n\014S" +
-      "IGMA_SELECT\020\003*Q\n\016BiasCorrection\022\r\n\tBIAS_" +
-      "NONE\020\000\022\017\n\013BIAS_LEGACY\020\001\022\017\n\013BIAS_SMOOTH\020\002" +
-      "\022\016\n\nBIAS_RATIO\020\003*7\n\rOutlierMethod\022\022\n\016OUT" +
-      "LIER_ADDONE\020\000\022\022\n\016OUTLIER_ADDALL\020\001*V\n\nEas" +
-      "terType\022\021\n\rEASTER_UNUSED\020\000\022\023\n\017EASTER_STA" +
-      "NDARD\020\001\022\021\n\rEASTER_JULIAN\020\002\022\r\n\tEASTER_SC\020" +
-      "\003*<\n\016RegressionTest\022\013\n\007TEST_NO\020\000\022\014\n\010TEST" +
-      "_ADD\020\001\022\017\n\013TEST_REMOVE\020\002*Z\n\024AutomaticTrad" +
-      "ingDays\022\016\n\nTD_AUTO_NO\020\000\022\020\n\014TD_AUTO_WALD\020" +
-      "\001\022\017\n\013TD_AUTO_AIC\020\002\022\017\n\013TD_AUTO_BIC\020\003B\'\n\030j" +
-      "dplus.x13.base.protobufB\tX13ProtosP\001P\000P\001" +
-      "P\002P\003b\006proto3"
+      "\0028\001\"\207\002\n\tX13Output\022\037\n\006result\030\001 \001(\0132\017.x13." +
+      "X13Results\022\"\n\017estimation_spec\030\002 \001(\0132\t.x1" +
+      "3.Spec\022\036\n\013result_spec\030\003 \001(\0132\t.x13.Spec\022 " +
+      "\n\003log\030\004 \001(\0132\023.jd3.ProcessingLogs\022,\n\007deta" +
+      "ils\030\005 \003(\0132\033.x13.X13Output.DetailsEntry\032E" +
+      "\n\014DetailsEntry\022\013\n\003key\030\001 \001(\t\022$\n\005value\030\002 \001" +
+      "(\0132\025.jd3.ProcessingDetail:\0028\001*\200\001\n\021Decomp" +
+      "ositionMode\022\020\n\014MODE_UNKNOWN\020\000\022\021\n\rMODE_AD" +
+      "DITIVE\020\001\022\027\n\023MODE_MULTIPLICATIVE\020\002\022\024\n\020MOD" +
+      "E_LOGADDITIVE\020\003\022\027\n\023MODE_PSEUDOADDITIVE\020\004" +
+      "*\215\002\n\016SeasonalFilter\022\027\n\023SEASONAL_FILTER_M" +
+      "SR\020\000\022\030\n\024SEASONAL_FILTER_S3X1\020\001\022\030\n\024SEASON" +
+      "AL_FILTER_S3X3\020\002\022\030\n\024SEASONAL_FILTER_S3X5" +
+      "\020\003\022\030\n\024SEASONAL_FILTER_S3X9\020\004\022\031\n\025SEASONAL" +
+      "_FILTER_S3X15\020\005\022\032\n\026SEASONAL_FILTER_STABL" +
+      "E\020\006\022\036\n\032SEASONAL_FILTER_X11DEFAULT\020\007\022#\n\037S" +
+      "EASONAL_FILTER_CROSSVALIDATION\020\010*R\n\rCale" +
+      "ndarSigma\022\016\n\nSIGMA_NONE\020\000\022\020\n\014SIGMA_SIGNI" +
+      "F\020\001\022\r\n\tSIGMA_ALL\020\002\022\020\n\014SIGMA_SELECT\020\003*Q\n\016" +
+      "BiasCorrection\022\r\n\tBIAS_NONE\020\000\022\017\n\013BIAS_LE" +
+      "GACY\020\001\022\017\n\013BIAS_SMOOTH\020\002\022\016\n\nBIAS_RATIO\020\003*" +
+      "7\n\rOutlierMethod\022\022\n\016OUTLIER_ADDONE\020\000\022\022\n\016" +
+      "OUTLIER_ADDALL\020\001*V\n\nEasterType\022\021\n\rEASTER" +
+      "_UNUSED\020\000\022\023\n\017EASTER_STANDARD\020\001\022\021\n\rEASTER" +
+      "_JULIAN\020\002\022\r\n\tEASTER_SC\020\003*<\n\016RegressionTe" +
+      "st\022\013\n\007TEST_NO\020\000\022\014\n\010TEST_ADD\020\001\022\017\n\013TEST_RE" +
+      "MOVE\020\002*Z\n\024AutomaticTradingDays\022\016\n\nTD_AUT" +
+      "O_NO\020\000\022\020\n\014TD_AUTO_WALD\020\001\022\017\n\013TD_AUTO_AIC\020" +
+      "\002\022\017\n\013TD_AUTO_BIC\020\003B\'\n\030jdplus.x13.base.pr" +
+      "otobufB\tX13ProtosP\001P\000P\001P\002P\003b\006proto3"
     };
     descriptor = com.google.protobuf.Descriptors.FileDescriptor
       .internalBuildGeneratedFileFrom(descriptorData,
@@ -306,7 +307,7 @@ public final class X13Protos {
           jdplus.sa.base.protobuf.SaProtos.getDescriptor(),
         });
     internal_static_x13_X11Spec_descriptor =
-      getDescriptor().getMessageTypes().getFirst();
+      getDescriptor().getMessageTypes().get(0);
     internal_static_x13_X11Spec_fieldAccessorTable = new
       com.google.protobuf.GeneratedMessage.FieldAccessorTable(
         internal_static_x13_X11Spec_descriptor,
@@ -318,11 +319,11 @@ public final class X13Protos {
         internal_static_x13_RegArimaSpec_descriptor,
         new java.lang.String[] { "Basic", "Transform", "Outlier", "Arima", "Automodel", "Regression", "Estimate", });
     internal_static_x13_RegArimaSpec_BasicSpec_descriptor =
-      internal_static_x13_RegArimaSpec_descriptor.getNestedTypes().getFirst();
+      internal_static_x13_RegArimaSpec_descriptor.getNestedTypes().get(0);
     internal_static_x13_RegArimaSpec_BasicSpec_fieldAccessorTable = new
       com.google.protobuf.GeneratedMessage.FieldAccessorTable(
         internal_static_x13_RegArimaSpec_BasicSpec_descriptor,
-        new java.lang.String[] { "Span", "Preprocessing", "PreliminaryCheck", });
+        new java.lang.String[] { "Span", "Preprocessing", "PreliminaryCheck", "AnnualFrequency", });
     internal_static_x13_RegArimaSpec_TransformSpec_descriptor =
       internal_static_x13_RegArimaSpec_descriptor.getNestedTypes().get(1);
     internal_static_x13_RegArimaSpec_TransformSpec_fieldAccessorTable = new
@@ -336,7 +337,7 @@ public final class X13Protos {
         internal_static_x13_RegArimaSpec_OutlierSpec_descriptor,
         new java.lang.String[] { "Outliers", "Span", "Defva", "Method", "MonthlyTcRate", "Maxiter", "Lsrun", });
     internal_static_x13_RegArimaSpec_OutlierSpec_Type_descriptor =
-      internal_static_x13_RegArimaSpec_OutlierSpec_descriptor.getNestedTypes().getFirst();
+      internal_static_x13_RegArimaSpec_OutlierSpec_descriptor.getNestedTypes().get(0);
     internal_static_x13_RegArimaSpec_OutlierSpec_Type_fieldAccessorTable = new
       com.google.protobuf.GeneratedMessage.FieldAccessorTable(
         internal_static_x13_RegArimaSpec_OutlierSpec_Type_descriptor,
@@ -420,7 +421,7 @@ public final class X13Protos {
         internal_static_x13_RegArimaOutput_descriptor,
         new java.lang.String[] { "Result", "EstimationSpec", "ResultSpec", "Log", "Details", });
     internal_static_x13_RegArimaOutput_DetailsEntry_descriptor =
-      internal_static_x13_RegArimaOutput_descriptor.getNestedTypes().getFirst();
+      internal_static_x13_RegArimaOutput_descriptor.getNestedTypes().get(0);
     internal_static_x13_RegArimaOutput_DetailsEntry_fieldAccessorTable = new
       com.google.protobuf.GeneratedMessage.FieldAccessorTable(
         internal_static_x13_RegArimaOutput_DetailsEntry_descriptor,
@@ -432,7 +433,7 @@ public final class X13Protos {
         internal_static_x13_X13Output_descriptor,
         new java.lang.String[] { "Result", "EstimationSpec", "ResultSpec", "Log", "Details", });
     internal_static_x13_X13Output_DetailsEntry_descriptor =
-      internal_static_x13_X13Output_descriptor.getNestedTypes().getFirst();
+      internal_static_x13_X13Output_descriptor.getNestedTypes().get(0);
     internal_static_x13_X13Output_DetailsEntry_fieldAccessorTable = new
       com.google.protobuf.GeneratedMessage.FieldAccessorTable(
         internal_static_x13_X13Output_DetailsEntry_descriptor,
